--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
-    "@types/mysql": "^2.15.26",
+    "@types/mssql": "^9.1.5",
+    "@types/sequelize": "^4.28.20",
+    "@types/tedious": "^4.0.14",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mysql": "^2.18.1",
+    "mssql": "^10.0.2",
+    "sequelize": "^6.37.3",
+    "tedious": "^18.2.0",
     "ts-node": "^10.9.2"
   }
 }
