--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
-    "@types/mssql": "^9.1.5",
     "@types/sequelize": "^4.28.20",
-    "@types/tedious": "^4.0.14",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mssql": "^10.0.2",
+    "mysql2": "^3.9.7",
     "sequelize": "^6.37.3",
-    "tedious": "^18.2.0",
     "ts-node": "^10.9.2"
   }
 }
