Add Swagger documentation for endpoints

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.7",
     "sequelize": "^6.37.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.2"
   }
 }
